2008-02-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in ($(MAKEDEPS)): Skip dependencies if omit_deps is defined.

2008-02-09  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_range_format): Eliminate sign arg.
	Change all callers.

2008-02-08  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::subsref): Allow Cell::index to resize.

	* input.cc (interactive_input): Eliminate debug arg.  Change All uses.
	(get_user_input): Don't process input_buf if there is an error.
	Call reset_error_handler instead of setting error_state to 0.

2008-02-07  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::sort): New functions.

2008-02-07  David Bateman  <dbateman@free.fr>

	* Makefile.in (DLD_XSRC): Delete spkron.cc.
	* DLD-FUNCTIONS/spkron.cc: Delete.
	* DLD-FUNCTIONS/kron.cc: Include here and dispatch to the sparse
	version if either argument is sparse.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* Makefile.in (parse.cc): Also use --defines option for bison.

2008-02-06  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.cc (axes::properties::set_defaults): Set default axes
	color to white.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* Makefile.in (parse.cc): Use "-o $@" instead of renaming y.tab.c.
	(maintainer-clean): Don't remove y.tab.c.

	* Makefile.in (parse.cc : parse.y): Use mv instead of move-if-change.
	(stamp-prereq, stamp-liboctave-prereq): Eliminate.
	(clean): Don't remove stamp-prereq and stamp-liboctave-prereq.
	(OPT_BASE, OPT_IN, OPT_INC): New macros.
	(OPT_HANDLERS): Define in terms of OPT_BASE.
	($(OPT_INC) : %.h : %.in): New pattern rule.
	(PREREQ): New macro.
	($(MAKEDEPS)): Simplify with $(PREREQ).

2008-02-05  John W. Eaton  <jwe@octave.org>

	* Makefile.in: Unconditionally include $(MAKEDEPS).
	Mark $(MAKEDEPS) as .PHONY targets if omit_deps is true.

2008-02-05  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (base_properties::get_boundingbox): New method.